--- a/pages/18940.html
+++ b/pages/18940.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      factorial in nLab
+      multinomial coefficient in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      factorial
+      multinomial coefficient
   </h1>
 
 
@@ -431,37 +431,40 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='definition'>Definition</h2>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_a34c38c8b3ecbbc2bb4a39a403b0d8f17ffc39c8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>k \in \mathbb{N}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/natural+number'>natural number</a>, its <em>factorial</em> <math class='maruku-mathml' display='inline' id='mathml_a34c38c8b3ecbbc2bb4a39a403b0d8f17ffc39c8_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>!</mo><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>k! \in \mathbb{N}</annotation></semantics></math> is the number obtained by <a class='existingWikiWord' href='/nlab/show/multiplication'>multiplying</a> all natural numbers smaller or equal to <math class='maruku-mathml' display='inline' id='mathml_a34c38c8b3ecbbc2bb4a39a403b0d8f17ffc39c8_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_a34c38c8b3ecbbc2bb4a39a403b0d8f17ffc39c8_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>!</mo><mspace width='thickmathspace'></mspace><mo>≔</mo><mspace width='thickmathspace'></mspace><mn>1</mn><mo>⋅</mo><mn>2</mn><mo>⋅</mo><mn>3</mn><mo>⋅</mo><mn>4</mn><mo>⋅</mo><mi>⋯</mi><mo>⋅</mo><mo stretchy='false'>(</mo><mi>k</mi><mo>−</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>⋅</mo><mi>k</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
-  k!
+<p>For <math class='maruku-mathml' display='inline' id='mathml_bd7f76b5cfdf49f0367bd2dfd2caeb66ba4897dd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/natural+number'>natural number</a> and <math class='maruku-mathml' display='inline' id='mathml_bd7f76b5cfdf49f0367bd2dfd2caeb66ba4897dd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msub><mi>k</mi> <mi>i</mi></msub><mo>∈</mo><mi>ℕ</mi><msubsup><mo stretchy='false'>)</mo> <mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow> <mi>r</mi></msubsup></mrow><annotation encoding='application/x-tex'>(k_i \in \mathbb{N})_{i = 1}^r</annotation></semantics></math> with <math class='maruku-mathml' display='inline' id='mathml_bd7f76b5cfdf49f0367bd2dfd2caeb66ba4897dd_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo><mi>i</mi></munder><msub><mi>k</mi> <mi>i</mi></msub><mo>=</mo><mi>k</mi></mrow><annotation encoding='application/x-tex'>\underset{i}{\sum} k_i = k</annotation></semantics></math>, the corresponding <em>multinomial coefficient</em></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_bd7f76b5cfdf49f0367bd2dfd2caeb66ba4897dd_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>(</mo><mfrac linethickness='0'><mrow><mi>n</mi></mrow><mrow><mrow><msub><mi>k</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>k</mi> <mn>2</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>k</mi> <mi>r</mi></msub></mrow></mrow></mfrac><mo>)</mo></mrow><mspace width='thickmathspace'></mspace><mo>≔</mo><mspace width='thickmathspace'></mspace><mfrac><mrow><mi>n</mi><mo>!</mo></mrow><mrow><msub><mi>k</mi> <mn>1</mn></msub><mo>!</mo><mspace width='thinmathspace'></mspace><msub><mi>k</mi> <mn>2</mn></msub><mo>!</mo><mspace width='thinmathspace'></mspace><mi>⋯</mi><mspace width='thinmathspace'></mspace><msub><mi>k</mi> <mi>r</mi></msub></mrow></mfrac><mspace width='thickmathspace'></mspace><mo>∈</mo><mspace width='thickmathspace'></mspace><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>
+  \left(
+     n
+     \atop
+     {
+       k_1, k_2, \cdots, k_r  
+     }
+  \right)
   \;\coloneqq\;
-  1 \cdot 2 \cdot 3 \cdot 4 \cdot \cdots \cdot (k-1) \cdot k
-  \,.
+  \frac{
+     n!
+  }{
+    k_1 ! \, k_2 ! \, \cdots \, k_r
+  }
+  \;\in\;
+  \mathbb{N}
 
 </annotation></semantics></math></div>
-<h2 id='related_concepts'>Related concepts</h2>
+<p>is the quotient of the <a class='existingWikiWord' href='/nlab/show/factorial'>factorial</a> of <math class='maruku-mathml' display='inline' id='mathml_bd7f76b5cfdf49f0367bd2dfd2caeb66ba4897dd_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math> by the <a class='existingWikiWord' href='/nlab/show/multiplication'>multiplication</a> of the factorials of the <math class='maruku-mathml' display='inline' id='mathml_bd7f76b5cfdf49f0367bd2dfd2caeb66ba4897dd_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>k</mi> <mi>i</mi></msub></mrow><annotation encoding='application/x-tex'>k_i</annotation></semantics></math>.</p>
 
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/binomial+theorem'>binomial coefficient</a>, <a class='existingWikiWord' href='/nlab/show/multinomial+coefficient'>multinomial coefficient</a></p>
-</li>
+<p>This number is the number of ways of drawing <math class='maruku-mathml' display='inline' id='mathml_bd7f76b5cfdf49f0367bd2dfd2caeb66ba4897dd_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>k</mi> <mn>1</mn></msub></mrow><annotation encoding='application/x-tex'>k_1</annotation></semantics></math> elements and then <math class='maruku-mathml' display='inline' id='mathml_bd7f76b5cfdf49f0367bd2dfd2caeb66ba4897dd_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>k</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>k_2</annotation></semantics></math> elements and so forth from <math class='maruku-mathml' display='inline' id='mathml_bd7f76b5cfdf49f0367bd2dfd2caeb66ba4897dd_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math> elements, all in an unordered way.</p>
 
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Gamma+function'>Gamma function</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/exponential+map'>exponential series</a></p>
-</li>
-</ul>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_bd7f76b5cfdf49f0367bd2dfd2caeb66ba4897dd_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>r</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>r = 2</annotation></semantics></math> this is the <em><a class='existingWikiWord' href='/nlab/show/binomial+theorem'>binomial coefficient</a></em>.</p>
 
 <h2 id='references'>References</h2>
 
+<p>See also</p>
+
 <ul>
-<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Factorial'>Factorial</a></em></li>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Multinomial_theorem'>Multinomial theorem</a></em></li>
 </ul>
 
 <p>
@@ -469,22 +472,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 16, 2018 10:52:53 
+  Created on January 16, 2018 10:57:07 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/factorial" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/factorial/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/factorial" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/factorial" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/multinomial+coefficient" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/factorial" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/multinomial+coefficient" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/factorial" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/multinomial+coefficient" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/factorial" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/multinomial+coefficient" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
