--- a/pages/18941.html
+++ b/pages/18941.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Euler formula for planar graphs in nLab
+      face in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Euler formula for planar graphs
+      face
   </h1>
 
 
@@ -309,59 +309,44 @@ margin-left: 0em;
 
 <div id="revision">
     <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#statement'>Statement</a></li><li><a href='#applications'>Applications</a><ul><li><a href='#in_perturbative_quantum_field_theory'>In perturbative quantum field theory</a></li></ul></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='statement'>Statement</h2>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
 
-<p>For a <a class='existingWikiWord' href='/nlab/show/planar+graph'>planar graph</a> <math class='maruku-mathml' display='inline' id='mathml_2176233eeeb6ef2b6c299b809ac00ae6ecdcd8d0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Γ</mi></mrow><annotation encoding='application/x-tex'>\Gamma</annotation></semantics></math> the numbers of <a class='existingWikiWord' href='/nlab/show/edge'>edges</a>, <a class='existingWikiWord' href='/nlab/show/vertex'>vertices</a> and number of regions enclosed by edges (“<a class='existingWikiWord' href='/nlab/show/face'>faces</a>”) always satisfies the relation</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2176233eeeb6ef2b6c299b809ac00ae6ecdcd8d0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn><mo>=</mo><mo stretchy='false'>|</mo><mi>Vertices</mi><mo stretchy='false'>(</mo><mi>Γ</mi><mo stretchy='false'>)</mo><mo stretchy='false'>|</mo><mo>−</mo><mo stretchy='false'>|</mo><mi>Edges</mi><mo stretchy='false'>(</mo><mi>Γ</mi><mo stretchy='false'>)</mo><mo stretchy='false'>|</mo><mo>+</mo><mo stretchy='false'>|</mo><mi>Faces</mi><mo stretchy='false'>(</mo><mi>Γ</mi><mo stretchy='false'>)</mo><mo stretchy='false'>|</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
-  1 = \vert Vertices(\Gamma)\vert - \vert Edges(\Gamma)\vert + 
-   \vert Faces(\Gamma)\vert
-  \,.
+<p>A 2-<a class='existingWikiWord' href='/nlab/show/cell+complex'>cell</a> in a <a class='existingWikiWord' href='/nlab/show/cell+complex'>cell complex</a>, such as a <a class='existingWikiWord' href='/nlab/show/polyhedron'>polyhedron</a> (or in a <a class='existingWikiWord' href='/nlab/show/globular+set'>globular set</a> or <a class='existingWikiWord' href='/nlab/show/simplicial+set'>simplicial set</a>, or <a class='existingWikiWord' href='/nlab/show/cubical+set'>cubical set</a> etc.) is often called a <em>face</em>.</p>
 
-</annotation></semantics></math></div>
-<p>By passing to the <a class='existingWikiWord' href='/nlab/show/one-point+compactification'>one-point compactification</a> of the <a class='existingWikiWord' href='/nlab/show/plane'>plane</a>, which is the <a class='existingWikiWord' href='/nlab/show/sphere'>2-sphere</a>, we may think of the planar graph as a <a class='existingWikiWord' href='/nlab/show/polyhedron'>polyhedron</a> embedded in the 2-sphere. Under this identification the above is a special case of the general formula for <a class='existingWikiWord' href='/nlab/show/Euler+characteristic'>Euler characteristic</a> of <a class='existingWikiWord' href='/nlab/show/CW+complex'>CW-complexes</a>. See at <em><a href='Euler+characteristic#OfATopologicalSpace'>Euler characteristic – Of topological spaces</a></em>.</p>
-
-<h2 id='applications'>Applications</h2>
-
-<h3 id='in_perturbative_quantum_field_theory'>In perturbative quantum field theory</h3>
-
-<p>That the <a class='existingWikiWord' href='/nlab/show/loop+order'>loop order</a> of a (planar) <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a> is its contribution in powers of <a class='existingWikiWord' href='/nlab/show/Planck%27s+constant'>Planck&#39;s constant</a> to the <a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>scattering amplitude</a> is a consequence of Euler’s formula. See at <em><a href='loop+order#RelationToPowersInPlancksConstant'>loop order – Relation to powers in Planck’s constant</a></em></p>
-
-<h2 id='references'>References</h2>
+<h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li>Wikiedia, <em><a href='https://en.wikipedia.org/wiki/Planar_graph#Euler.27s_formula'>Euler’s formula</a></em></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/edge'>edge</a>, <a class='existingWikiWord' href='/nlab/show/vertex'>vertex</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler+formula+for+planar+graphs'>Euler characteristic of planar graphs</a></p>
+</li>
 </ul>
 
 <p>
 </p>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
 </div>
 
 <div class="revisedby">
-  Revised on January 16, 2018 14:33:56 
+  Created on January 16, 2018 14:32:25 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Euler+formula+for+planar+graphs" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Euler+formula+for+planar+graphs/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Euler+formula+for+planar+graphs" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Euler+formula+for+planar+graphs" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/face" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Euler+formula+for+planar+graphs" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/face" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Euler+formula+for+planar+graphs" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/face" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Euler+formula+for+planar+graphs" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/face" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
