--- a/pages/18941.html
+++ b/pages/18941.html
@@ -309,10 +309,12 @@ margin-left: 0em;
 
 <div id="revision">
     <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>A 2-<a class='existingWikiWord' href='/nlab/show/cell+complex'>cell</a> in a <a class='existingWikiWord' href='/nlab/show/cell+complex'>cell complex</a>, such as a <a class='existingWikiWord' href='/nlab/show/polyhedron'>polyhedron</a> (or in a <a class='existingWikiWord' href='/nlab/show/globular+set'>globular set</a> or <a class='existingWikiWord' href='/nlab/show/simplicial+set'>simplicial set</a>, or <a class='existingWikiWord' href='/nlab/show/cubical+set'>cubical set</a> etc.) is often called a <em>face</em>.</p>
+
+<p>More generally one calls cells in the <a class='existingWikiWord' href='/nlab/show/boundary'>boundary</a> of a <a class='existingWikiWord' href='/nlab/show/cell+complex'>cell complex</a> faces, even if they are higher dimensions (for instance in the definition of <a class='existingWikiWord' href='/nlab/show/simplex'>simplices</a> and <a class='existingWikiWord' href='/nlab/show/simplicial+set'>simplicial sets</a>).</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -326,19 +328,27 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h2 id='references'>References</h2>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Face_(geometry)'>Face (geometry)</a></em></li>
+</ul>
+
 <p>
 </p>
 </div>
 
 <div class="revisedby">
-  Created on January 16, 2018 14:32:25 
+  Revised on January 16, 2018 15:46:37 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/face" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/face" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/face/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/face" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/face" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
