--- a/pages/18943.html
+++ b/pages/18943.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -312,12 +312,18 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>Haag-Ruelle scattering theory is a formalization of <a class='existingWikiWord' href='/nlab/show/scattering'>scattering</a> process in <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> in the framework of <a class='existingWikiWord' href='/nlab/show/AQFT'>algebraic quantum field theory</a>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a>, <em>Haag-Ruelle scattering theory</em> refers to formalization of <a class='existingWikiWord' href='/nlab/show/scattering'>scattering</a> processes in the framework of <a class='existingWikiWord' href='/nlab/show/AQFT'>algebraic quantum field theory</a>.</p>
 
 <h2 id='references'>References</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Nikolay+Bogolyubov'>Nikolay Bogoliubov</a>, A. A. Logunov, A. I. OksakI. T. Todorov. G. G. Gould, <em>Haag-Ruelle Scattering Theory</em>, In: Bogolubov N.N., Logunov A.A., Oksak A.I., Todorov I.T. (eds) <em>General Principles of Quantum Field Theory</em>. Mathematical Physics and Applied Mathematics, vol 10. Springer, Dordrecht</li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Rudolf+Haag'>Rudolf Haag</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Nikolay+Bogolyubov'>Nikolay Bogoliubov</a>, A. A. Logunov, A. I. OksakI. T. Todorov. G. G. Gould, <em>Haag-Ruelle Scattering Theory</em>, In: Bogolubov N.N., Logunov A.A., Oksak A.I., Todorov I.T. (eds) <em>General Principles of Quantum Field Theory</em>. Mathematical Physics and Applied Mathematics, vol 10. Springer, Dordrecht</p>
+</li>
 </ul>
 
 <p>
@@ -325,14 +331,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on January 17, 2018 13:21:26 
+  Revised on January 17, 2018 14:19:31 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Haag-Ruelle+scattering+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Haag-Ruelle+scattering+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Haag-Ruelle+scattering+theory/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Haag-Ruelle+scattering+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Haag-Ruelle+scattering+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
