--- a/pages/10712.html
+++ b/pages/10712.html
@@ -555,19 +555,19 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#statement'>Statement</a></li><li><a href='#special_cases'>Special cases</a></li><li><a href='#consequences'>Consequences</a><ul><li><a href='#relation_with_fields'>Relation with <math class='maruku-mathml' display='inline' id='mathml_688d4f83b2e2ca7012f68b392f049f346d77338e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-fields</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#statement'>Statement</a></li><li><a href='#special_cases'>Special cases</a></li><li><a href='#consequences'>Consequences</a><ul><li><a href='#relation_with_fields'>Relation with <math class='maruku-mathml' display='inline' id='mathml_80382999cff1c4de9fa9e0bfb1355bedd0d8663d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-fields</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>A fundamental statement in <a class='existingWikiWord' href='/nlab/show/stable+homotopy+theory'>stable homotopy theory</a>/<a class='existingWikiWord' href='/nlab/show/higher+algebra'>higher algebra</a>/<a class='existingWikiWord' href='/nlab/show/chromatic+homotopy+theory'>chromatic homotopy theory</a>.</p>
 
 <h2 id='statement'>Statement</h2>
 
-<p>For any <a class='existingWikiWord' href='/nlab/show/ring+spectrum'>ring spectrum</a> <math class='maruku-mathml' display='inline' id='mathml_688d4f83b2e2ca7012f68b392f049f346d77338e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>E</mi></mrow><annotation encoding='application/x-tex'>E</annotation></semantics></math> the kernel of the canonical <a class='existingWikiWord' href='/nlab/show/morphism'>morphism</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_688d4f83b2e2ca7012f68b392f049f346d77338e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mo>•</mo></msub><mi>R</mi><mo>⟶</mo><msub><mi>MU</mi> <mo>•</mo></msub><mo stretchy='false'>(</mo><mi>R</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+<p>For any <a class='existingWikiWord' href='/nlab/show/ring+spectrum'>ring spectrum</a> <math class='maruku-mathml' display='inline' id='mathml_80382999cff1c4de9fa9e0bfb1355bedd0d8663d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> the kernel of the canonical <a class='existingWikiWord' href='/nlab/show/morphism'>morphism</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_80382999cff1c4de9fa9e0bfb1355bedd0d8663d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mo>•</mo></msub><mi>R</mi><mo>⟶</mo><msub><mi>MU</mi> <mo>•</mo></msub><mo stretchy='false'>(</mo><mi>R</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
   \pi_\bullet R \longrightarrow MU_\bullet(R)
 
 </annotation></semantics></math></div>
-<p>to the <a class='existingWikiWord' href='/nlab/show/MU'>MU</a>-homology of <math class='maruku-mathml' display='inline' id='mathml_688d4f83b2e2ca7012f68b392f049f346d77338e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> consists of <a class='existingWikiWord' href='/nlab/show/nilpotent+element'>nilpotent elements</a>.</p>
+<p>to the <a class='existingWikiWord' href='/nlab/show/MU'>MU</a>-homology of <math class='maruku-mathml' display='inline' id='mathml_80382999cff1c4de9fa9e0bfb1355bedd0d8663d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> consists of <a class='existingWikiWord' href='/nlab/show/nilpotent+element'>nilpotent elements</a>.</p>
 
 <p>This is due to <a class='existingWikiWord' href='/nlab/show/Ethan+Devinatz'>Ethan Devinatz</a>, <a class='existingWikiWord' href='/nlab/show/Michael+Hopkins'>Mike Hopkins</a>, and <a class='existingWikiWord' href='/nlab/show/Jeff+Smith'>Jeff Smith</a>. See <a href='#Lurie10'>Lurie 10, theorem 3</a></p>
 
@@ -579,9 +579,9 @@ margin-left: 0em;
 
 <h2 id='consequences'>Consequences</h2>
 
-<h3 id='relation_with_fields'>Relation with <math class='maruku-mathml' display='inline' id='mathml_688d4f83b2e2ca7012f68b392f049f346d77338e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-fields</h3>
+<h3 id='relation_with_fields'>Relation with <math class='maruku-mathml' display='inline' id='mathml_80382999cff1c4de9fa9e0bfb1355bedd0d8663d_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-fields</h3>
 
-<p>The nilpotence theorem implies that every <a class='existingWikiWord' href='/nlab/show/infinity-field'>∞-field</a> is an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-module'>∞-module</a> over the <a class='existingWikiWord' href='/nlab/show/Morava+K-theory'>Morava K-theory</a> <a class='existingWikiWord' href='/nlab/show/spectrum'>spectrum</a> <math class='maruku-mathml' display='inline' id='mathml_688d4f83b2e2ca7012f68b392f049f346d77338e_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>K(n)</annotation></semantics></math>, for some <math class='maruku-mathml' display='inline' id='mathml_688d4f83b2e2ca7012f68b392f049f346d77338e_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>. See at <em><a class='existingWikiWord' href='/nlab/show/infinity-field'>∞-field</a></em>.</p>
+<p>The nilpotence theorem implies that every <a class='existingWikiWord' href='/nlab/show/infinity-field'>∞-field</a> is an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-module'>∞-module</a> over the <a class='existingWikiWord' href='/nlab/show/Morava+K-theory'>Morava K-theory</a> <a class='existingWikiWord' href='/nlab/show/spectrum'>spectrum</a> <math class='maruku-mathml' display='inline' id='mathml_80382999cff1c4de9fa9e0bfb1355bedd0d8663d_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>K(n)</annotation></semantics></math>, for some <math class='maruku-mathml' display='inline' id='mathml_80382999cff1c4de9fa9e0bfb1355bedd0d8663d_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>. See at <em><a class='existingWikiWord' href='/nlab/show/infinity-field'>∞-field</a></em>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -616,14 +616,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October  9, 2017 02:53:35 
-  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
-  (95.148.217.107)
+  Revised on January 17, 2018 16:25:03 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (185.120.126.71)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/nilpotence+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/nilpotence+theorem/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/nilpotence+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/nilpotence+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/nilpotence+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/nilpotence+theorem/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/nilpotence+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/nilpotence+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
